Basically finish extract features script and add some examples to template conf

--- a/extract.template.conf
+++ b/extract.template.conf
@@ -1,13 +1,15 @@
 # Path to all bdeck files to process.
-# TODO: Some people say that using `ls` could lead to execution of arbitrary code.
-# We probably want to do something else, but for now, leave it as it is.
-BDECK_FILES=$(ls data/tc/bdeck/bal*2007.dat data/tc/bdeck/bwp*.dat)
+# BDECK_FILES=data/tc/bdeck/bal*2007.dat data/tc/bdeck/bwp*.dat
+BDECK_FILES=""
 
 # Path to parent directory contains all GRIB2 reanalysis files.
-REANALYSIS_DIR="./data/ncep-fnl/"
+# REANALYSIS_FILES=data/ncep-fnl/**/*.grib2
+# REANALYSIS_FILES=data/ncep-fnl/2009/*.grib2
+REANALYSIS_FILES=""
 
 # Output directory contains the result of this script.
-OUTPUT_DIR="./test_data"
+# OUTPUT_DIR="./test_data"
+OUTPUT_DIR=""
 
 # Lead time to extract observation data, expressed in hours.
 LEAD_TIME=6
