Add default configuration for config file

--- a/extract.template.conf
+++ b/extract.template.conf
@@ -15,11 +15,15 @@ OUTPUT_DIR=""
 LEAD_TIME=6
 
 # Domain size to extract cyclones and observation data.
+# LATITUDE=(5 45)
+# LONGITUDE=(100 280)
 LATITUDE=(-35 5)
 LONGITUDE=(-80 20)
 
 # Observation variables to extract.
+# VARIABLES=("ABSVprs" "CAPEsfc" "GPA500mb" "ugrdprs" "vgrdprs")
 VARIABLES=("")
 
 # Pressure level to extract observation data from.
+# LEVELS=(700)
 LEVELS=(700)
