Update to Tensorflow 2.4.1 and add tensorflow addons

--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,8 @@ dependencies:
   - pandas
   - pip
   - pip:
+    - -r requirements.txt
     - -r requirements-dev.txt
-  - tensorflow
+  - tensorflow-gpu=2.4.1
   - xarray
 
