Extract features at multiple pressure levels

--- a/extract.template.conf
+++ b/extract.template.conf
@@ -27,3 +27,19 @@ VARIABLES=("")
 # Pressure level to extract observation data from.
 # LEVELS=(700)
 LEVELS=(700)
+
+# New way to declare which variables to extract from which pressure levels. 
+declare -A VARIABLES_PRESSURES=(
+    # Absolute vorticity, unit 1/s.
+    ["ABSVprs"]="700 500 225"
+    # Convective potential energy, unit J/kg
+    ["CAPEsfc"]="0"
+    # Surface Temperature, unit K
+    ["TMPsfc"]="0"
+    # Geopotential Height, unit gpm
+    ["HGTprs"]="700 500 225"
+    # u-component of wind, unit m/s
+    ["ugrdprs"]="700 500 225"
+    # v-component of wind, unit m/s
+    ["vgrdprs"]="700 500 225"
+)
