--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,9 @@ cython_debug/
 *.ipynb
 logs/
 
+# Model checkpoint output
+experiments/**/*/outputs
+
 # Keras Tuner stuffs
 **/*/trial_*/
 oracle.json
