--- a/scripts/extract.template.conf
+++ b/scripts/extract.template.conf
@@ -7,6 +7,9 @@ BDECK_FILES=""
 # REANALYSIS_FILES=data/ncep-fnl/2009/*.grib2
 REANALYSIS_FILES=""
 
+# Number of concurrent processes to launch.
+N_PROCESSES=8
+
 # Output directory contains the result of this script.
 # OUTPUT_DIR="./test_data"
 OUTPUT_DIR=""
@@ -15,10 +18,8 @@ OUTPUT_DIR=""
 LEAD_TIME=6
 
 # Domain size to extract cyclones and observation data.
-# LATITUDE=(5 45)
-# LONGITUDE=(100 280)
-LATITUDE=(-35 5)
-LONGITUDE=(-80 20)
+LATITUDE=(5 45)
+LONGITUDE=(100 260)
 
 # Observation variables to extract.
 # VARIABLES=("ABSVprs" "CAPEsfc" "GPA500mb" "ugrdprs" "vgrdprs")
@@ -31,15 +32,21 @@ LEVELS=(700)
 # New way to declare which variables to extract from which pressure levels. 
 declare -A VARIABLES_PRESSURES=(
     # Absolute vorticity, unit 1/s.
-    ["ABSVprs"]="700 500 225"
+    ["ABSVprs"]="1000-200"
     # Convective potential energy, unit J/kg
     ["CAPEsfc"]="0"
+    # Relative Humidity
+    ["RHprs"]="1000-200"
+    # Temperature
+    ["TMPprs"]="1000-200"
     # Surface Temperature, unit K
     ["TMPsfc"]="0"
     # Geopotential Height, unit gpm
-    ["HGTprs"]="700 500 225"
+    ["HGTprs"]="1000-200"
+    # Vertical velocity, unit Pa/s
+    ["VVELprs"]="1000-200"
     # u-component of wind, unit m/s
-    ["ugrdprs"]="700 500 225"
+    ["ugrdprs"]="1000-200"
     # v-component of wind, unit m/s
-    ["vgrdprs"]="700 500 225"
+    ["vgrdprs"]="1000-200"
 )
