--- a/environment.yml
+++ b/environment.yml
@@ -1,338 +1,117 @@
-name: tc_updated_2
+name: tc
 channels:
+  - bioconda
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
-  - abseil-cpp=20210324.2=h9c3ff4c_0
-  - absl-py=1.0.0=pyhd8ed1ab_0
-  - aiohttp=3.8.1=py39hb9d737c_1
-  - aiosignal=1.2.0=pyhd8ed1ab_0
-  - alsa-lib=1.2.3=h516909a_0
-  - ansiwrap=0.8.4=py_0
-  - aom=3.3.0=h27087fc_1
-  - asttokens=2.0.5=pyhd8ed1ab_0
-  - astunparse=1.6.3=pyhd8ed1ab_0
-  - async-timeout=4.0.2=pyhd8ed1ab_0
-  - attrs=21.4.0=pyhd8ed1ab_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - basemap=1.2.2=py39h2103e0b_4
-  - basemap-data-hires=1.2.2=0
-  - bayesian-optimization=1.1.0=py_0
-  - black=22.3.0=pyhd8ed1ab_0
-  - blinker=1.4=py_1
-  - bokeh=2.4.2=py39hf3d152e_1
-  - bottleneck=1.3.4=py39hd257fcd_1
-  - brotli=1.0.9=h166bdaf_7
-  - brotli-bin=1.0.9=h166bdaf_7
-  - brotlipy=0.7.0=py39hb9d737c_1004
+  - _openmp_mutex=4.5=2_gnu
+  - attrs=22.1.0=pyh71513ae_1
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.5.18.1=ha878542_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - cachetools=4.2.4=pyhd8ed1ab_0
-  - cairo=1.16.0=ha12eb4b_1010
-  - certifi=2022.5.18.1=py39hf3d152e_0
-  - cffi=1.15.0=py39h4bc2ebd_0
-  - cftime=1.6.0=py39hd257fcd_1
-  - charset-normalizer=2.0.12=pyhd8ed1ab_0
-  - click=8.1.2=py39hf3d152e_0
-  - cloudpickle=2.0.0=pyhd8ed1ab_0
-  - colorama=0.4.4=pyh9f0ad1d_0
-  - cryptography=36.0.2=py39hd97740a_1
-  - cudatoolkit=11.6.0=habf752d_10
-  - cudnn=8.2.1.32=h86fa8c9_0
-  - curl=7.82.0=h7bff187_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - cytoolz=0.11.2=py39hb9d737c_2
-  - dask=2022.4.1=pyhd8ed1ab_0
-  - dask-core=2022.4.1=pyhd8ed1ab_0
-  - dataclasses=0.8=pyhc8e2a94_3
-  - dbus=1.13.6=h5008d03_3
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - distributed=2022.4.1=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - executing=0.8.3=pyhd8ed1ab_0
-  - expat=2.4.8=h27087fc_0
-  - ffmpeg=4.4.1=hd7ab26d_2
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.14.0=h8e229c2_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.32.0=py39hb9d737c_0
+  - ca-certificates=2022.9.24=ha878542_0
+  - cfgrib=0.9.10.2=pyhd8ed1ab_0
+  - curl=7.86.0=h2283fc2_1
+  - findlibs=0.0.2=pyhd8ed1ab_0
   - freeglut=3.2.2=h9c3ff4c_1
-  - freetype=2.10.4=h0708190_1
-  - frozenlist=1.3.0=py39hb9d737c_1
-  - fsspec=2022.3.0=pyhd8ed1ab_0
-  - future=0.18.2=py39hf3d152e_5
-  - gast=0.4.0=pyh9f0ad1d_0
-  - geos=3.9.1=h9c3ff4c_2
-  - gettext=0.19.8.1=h73d1719_1008
-  - giflib=5.2.1=h36c2ea0_2
-  - gmp=6.2.1=h58526e2_0
-  - gnutls=3.6.13=h85f3911_1
-  - google-auth=1.35.0=pyh6c4a22f_0
-  - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
-  - google-pasta=0.2.0=pyh8c360ce_0
-  - graphite2=1.3.13=h58526e2_1001
-  - grpc-cpp=1.42.0=ha1441d3_1
-  - grpcio=1.42.0=py39hff7568b_0
-  - gst-plugins-base=1.20.1=hcf0ee16_1
-  - gstreamer=1.20.1=hd4edc92_1
-  - h5py=3.6.0=nompi_py39h7e08c79_100
-  - harfbuzz=4.2.0=h40b6f09_0
-  - hdf4=4.2.15=h10796ff_3
-  - hdf5=1.12.1=nompi_h2386368_104
-  - heapdict=1.0.1=py_0
-  - icu=69.1=h9c3ff4c_0
-  - idna=3.3=pyhd8ed1ab_0
-  - importlib-metadata=4.11.3=py39hf3d152e_1
-  - importlib_metadata=4.11.3=hd8ed1ab_1
-  - importlib_resources=5.7.1=pyhd8ed1ab_0
-  - ipython=8.2.0=py39hf3d152e_0
+  - hdf4=4.2.15=h9772cbc_5
+  - hdf5=1.12.2=nompi_h4df4325_100
+  - icu=70.1=h27087fc_0
   - jasper=2.0.33=ha77e612_0
-  - jbig=2.1=h7f98852_2003
-  - jedi=0.18.1=py39hf3d152e_1
-  - jinja2=3.1.1=pyhd8ed1ab_0
-  - joblib=1.1.0=pyhd8ed1ab_0
-  - jpeg=9e=h166bdaf_1
-  - jsonschema=4.4.0=pyhd8ed1ab_0
-  - jupyter_client=7.2.2=pyhd8ed1ab_1
-  - jupyter_core=4.9.2=py39hf3d152e_0
-  - keras=2.7.0=pyhd8ed1ab_0
-  - keras-preprocessing=1.1.2=pyhd8ed1ab_0
-  - keras-tuner=1.1.0=pyhd8ed1ab_0
+  - jpeg=9e=h166bdaf_2
   - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.2=py39hf939315_1
-  - krb5=1.19.3=h3790be6_0
-  - lame=3.100=h7f98852_1001
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.36.1=hea4e1c9_2
-  - lerc=3.0=h9c3ff4c_0
-  - libblas=3.9.0=14_linux64_openblas
-  - libbrotlicommon=1.0.9=h166bdaf_7
-  - libbrotlidec=1.0.9=h166bdaf_7
-  - libbrotlienc=1.0.9=h166bdaf_7
-  - libcblas=3.9.0=14_linux64_openblas
-  - libclang=13.0.1=default_hc23dcda_0
-  - libcurl=7.82.0=h7bff187_0
-  - libdeflate=1.10=h7f98852_0
-  - libdrm=2.4.109=h7f98852_0
+  - krb5=1.19.3=h08a2579_0
+  - ld_impl_linux-64=2.39=hc81fddc_0
+  - libaec=1.0.6=h9c3ff4c_0
+  - libblas=3.9.0=16_linux64_openblas
+  - libcblas=3.9.0=16_linux64_openblas
+  - libcurl=7.86.0=h2283fc2_1
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=h516909a_1
-  - libevent=2.1.10=h9b69904_4
   - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=12.1.0=h8d9b700_16
-  - libgfortran-ng=11.2.0=h69a702a_15
-  - libgfortran5=11.2.0=h5c6108e_15
-  - libglib=2.70.2=h174f98d_4
+  - libgcc-ng=12.2.0=h65d4601_19
+  - libgfortran-ng=12.2.0=h69a702a_19
+  - libgfortran5=12.2.0=h337968e_19
   - libglu=9.0.0=he1b5a44_1001
-  - libgomp=12.1.0=h8d9b700_16
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=14_linux64_openblas
-  - liblapacke=3.9.0=14_linux64_openblas
-  - libllvm13=13.0.1=hf817b99_2
-  - libnetcdf=4.8.1=nompi_hb3fd0d9_101
-  - libnghttp2=1.47.0=h727a467_0
+  - libgomp=12.2.0=h65d4601_19
+  - libiconv=1.17=h166bdaf_0
+  - liblapack=3.9.0=16_linux64_openblas
+  - libnetcdf=4.8.1=nompi_h261ec11_106
+  - libnghttp2=1.47.0=hff17c54_1
   - libnsl=2.0.0=h7f98852_0
-  - libogg=1.3.4=h7f98852_1
-  - libopenblas=0.3.20=pthreads_h78a6416_0
-  - libopencv=4.5.5=py39hb0e02d1_7
-  - libopus=1.3.1=h7f98852_1
-  - libpciaccess=0.16=h516909a_0
-  - libpng=1.6.37=h21135ba_2
-  - libpq=14.2=hd57d9b9_0
-  - libprotobuf=3.19.4=h780b84a_0
-  - libsodium=1.0.18=h36c2ea0_1
-  - libssh2=1.10.0=ha56f1ee_2
-  - libstdcxx-ng=11.2.0=he4da1e4_15
-  - libtiff=4.3.0=h542a066_3
+  - libopenblas=0.3.21=pthreads_h78a6416_3
+  - libpng=1.6.38=h753d276_0
+  - libsqlite=3.40.0=h753d276_0
+  - libssh2=1.10.0=hf14f497_3
+  - libstdcxx-ng=12.2.0=h46fd767_19
   - libuuid=2.32.1=h7f98852_1000
-  - libva=2.14.0=h7f98852_0
-  - libvorbis=1.3.7=h9c3ff4c_0
-  - libvpx=1.11.0=h9c3ff4c_3
-  - libwebp=1.2.2=h3452ae3_0
-  - libwebp-base=1.2.2=h7f98852_1
   - libxcb=1.13=h7f98852_1004
-  - libxkbcommon=1.0.3=he3ba5ed_0
-  - libxml2=2.9.12=h885dcf4_1
-  - libzip=1.8.0=h4de3113_1
-  - libzlib=1.2.11=h166bdaf_1014
-  - locket=0.2.0=py_2
-  - lz4=4.0.0=py39h029007f_1
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - markdown=3.3.6=pyhd8ed1ab_0
-  - markupsafe=2.1.1=py39hb9d737c_1
-  - matplotlib=3.5.1=py39hf3d152e_0
-  - matplotlib-base=3.5.1=py39h2fa2bec_0
-  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
-  - msgpack-python=1.0.3=py39hf939315_1
-  - multidict=6.0.2=py39hb9d737c_1
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - mypy_extensions=0.4.3=py39hf3d152e_5
-  - mysql-common=8.0.28=haf5c9bc_4
-  - mysql-libs=8.0.28=h28c427c_4
-  - nbclient=0.6.0=pyhd8ed1ab_0
-  - nbformat=5.3.0=pyhd8ed1ab_0
-  - nccl=2.12.10.1=h0800d71_0
+  - libxml2=2.10.3=h7463322_0
+  - libzip=1.9.2=hc929e4a_1
+  - libzlib=1.2.13=h166bdaf_4
   - ncurses=6.3=h27087fc_1
-  - nest-asyncio=1.5.5=pyhd8ed1ab_0
-  - netcdf4=1.5.8=nompi_py39h64b754b_101
-  - nettle=3.6=he412f7d_0
-  - nspr=4.32=h9c3ff4c_1
-  - nss=3.77=h2350873_0
-  - numpy=1.22.3=py39h18676bf_2
-  - oauthlib=3.2.0=pyhd8ed1ab_0
-  - opencv=4.5.5=py39hf3d152e_7
-  - openh264=2.1.1=h780b84a_0
-  - openjpeg=2.4.0=hb52868f_1
-  - openssl=1.1.1o=h166bdaf_0
-  - opt_einsum=3.3.0=pyhd8ed1ab_1
+  - openssl=3.0.7=h166bdaf_0
   - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.4.2=py39h1832856_1
-  - papermill=2.3.4=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - partd=1.2.0=pyhd8ed1ab_0
-  - pathspec=0.9.0=pyhd8ed1ab_0
-  - pcre=8.45=h9c3ff4c_0
-  - pexpect=4.8.0=pyh9f0ad1d_2
-  - pickleshare=0.7.5=py_1003
-  - pillow=9.1.0=py39hae2aec6_2
-  - pip=22.0.4=pyhd8ed1ab_0
-  - pixman=0.40.0=h36c2ea0_0
-  - platformdirs=2.5.1=pyhd8ed1ab_0
-  - proj=8.0.1=h277dcde_0
-  - prompt-toolkit=3.0.29=pyha770c72_0
-  - protobuf=3.19.4=py39he80948d_0
-  - psutil=5.9.0=py39hb9d737c_1
+  - pip=22.3.1=pyhd8ed1ab_0
   - pthread-stubs=0.4=h36c2ea0_1001
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - py-opencv=4.5.5=py39hef51801_7
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.7=py_0
   - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.11.2=pyhd8ed1ab_0
-  - pyjwt=2.3.0=pyhd8ed1ab_1
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.8=pyhd8ed1ab_0
-  - pyproj=3.3.0=py39h02a9fcc_2
-  - pyqt=5.12.3=py39hf3d152e_8
-  - pyqt-impl=5.12.3=py39hde8b62d_8
-  - pyqt5-sip=4.19.18=py39he80948d_8
-  - pyqtchart=5.12=py39h0fcd23e_8
-  - pyqtwebengine=5.12.1=py39h0fcd23e_8
-  - pyrsistent=0.18.1=py39hb9d737c_1
-  - pyshp=2.2.0=pyhd8ed1ab_0
-  - pysocks=1.7.1=py39hf3d152e_5
-  - python=3.9.12=h9a8a25e_1_cpython
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - python=3.10.6=ha86cf86_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.15.3=pyhd8ed1ab_0
-  - python-flatbuffers=2.0=pyhd8ed1ab_0
-  - python_abi=3.9=2_cp39
-  - pytz=2022.1=pyhd8ed1ab_0
-  - pyu2f=0.1.5=pyhd8ed1ab_0
-  - pyyaml=6.0=py39hb9d737c_4
-  - pyzmq=22.3.0=py39headdf64_2
-  - qt=5.12.9=h1304e3e_6
-  - re2=2021.11.01=h9c3ff4c_0
-  - readline=8.1=h46c0cb4_0
-  - requests=2.27.1=pyhd8ed1ab_0
-  - requests-oauthlib=1.3.1=pyhd8ed1ab_0
-  - rsa=4.8=pyhd8ed1ab_0
-  - scikit-learn=1.0.2=py39h4dfa638_0
-  - scipy=1.8.0=py39hee8e79c_1
-  - setuptools=62.1.0=py39hf3d152e_0
+  - python-eccodes=1.4.2=py310hde88566_1
+  - python_abi=3.10=2_cp310
+  - pytz=2022.6=pyhd8ed1ab_0
+  - readline=8.1.2=h0f457ee_0
+  - setuptools=65.5.1=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
-  - snappy=1.1.8=he1b5a44_3
-  - sortedcontainers=2.4.0=pyhd8ed1ab_0
-  - sqlite=3.38.2=h4ff8645_0
-  - stack_data=0.2.0=pyhd8ed1ab_0
-  - svt-av1=0.9.1=h27087fc_0
-  - tabulate=0.8.9=pyhd8ed1ab_0
-  - tblib=1.7.0=pyhd8ed1ab_0
-  - tempest-extremes=2.2.1=nompi_h315c29f_100
-  - tenacity=8.0.1=pyhd8ed1ab_0
-  - tensorboard=2.6.0=pyhd8ed1ab_1
-  - tensorboard-data-server=0.6.0=py39hd97740a_2
-  - tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
-  - tensorflow=2.7.0=cuda112py39h01bd6f0_0
-  - tensorflow-base=2.7.0=cuda112py39hd98b2dd_0
-  - tensorflow-estimator=2.7.0=cuda112py39h23446aa_0
-  - termcolor=1.1.0=py_2
-  - terminaltables=3.1.10=pyhd8ed1ab_0
-  - textwrap3=0.9.2=py_0
-  - threadpoolctl=3.1.0=pyh8a188c0_0
   - tk=8.6.12=h27826a3_0
-  - tomli=2.0.1=pyhd8ed1ab_0
-  - toolz=0.11.2=pyhd8ed1ab_0
-  - tornado=6.1=py39hb9d737c_3
-  - tqdm=4.64.0=pyhd8ed1ab_0
-  - traitlets=5.1.1=pyhd8ed1ab_0
-  - typed-ast=1.5.3=py39hb9d737c_0
-  - typing-extensions=4.2.0=hd8ed1ab_0
-  - typing_extensions=4.2.0=pyha770c72_0
-  - tzdata=2022a=h191b570_0
-  - unicodedata2=14.0.0=py39hb9d737c_1
-  - urllib3=1.26.9=pyhd8ed1ab_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - werkzeug=2.1.1=pyhd8ed1ab_0
-  - wheel=0.37.1=pyhd8ed1ab_0
-  - wrapt=1.14.0=py39hb9d737c_1
-  - wrf-python=1.3.4.1=py39hcfb25b2_1
-  - x264=1!161.3030=h7f98852_1
-  - x265=3.5=h924138e_3
-  - xarray=2022.3.0=pyhd8ed1ab_0
+  - tzdata=2022f=h191b570_0
+  - wheel=0.38.4=pyhd8ed1ab_0
+  - xarray=2022.11.0=pyhd8ed1ab_0
   - xorg-fixesproto=5.0=h7f98852_1002
   - xorg-inputproto=2.3.2=h7f98852_1002
   - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.0.10=h7f98852_0
-  - xorg-libsm=1.2.3=hd9c2040_1000
   - xorg-libx11=1.7.2=h7f98852_0
   - xorg-libxau=1.0.9=h7f98852_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xorg-libxext=1.3.4=h7f98852_1
   - xorg-libxfixes=5.0.3=h7f98852_1004
   - xorg-libxi=1.7.10=h7f98852_0
-  - xorg-libxrender=0.9.10=h7f98852_1003
-  - xorg-renderproto=0.11.1=h7f98852_1002
   - xorg-xextproto=7.3.0=h7f98852_1002
   - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h7f98852_2
-  - yarl=1.7.2=py39hb9d737c_2
-  - zeromq=4.3.4=h9c3ff4c_1
-  - zict=2.1.0=pyhd8ed1ab_0
-  - zipp=3.8.0=pyhd8ed1ab_0
-  - zlib=1.2.11=h166bdaf_1014
-  - zstd=1.5.2=ha95c52a_0
+  - xz=5.2.6=h166bdaf_0
+  - zlib=1.2.13=h166bdaf_4
   - pip:
-    - argon2-cffi==21.3.0
-    - argon2-cffi-bindings==21.2.0
-    - beautifulsoup4==4.11.1
-    - bleach==5.0.0
-    - debugpy==1.6.0
-    - defusedxml==0.7.1
-    - global-land-mask==1.0.0
-    - ipykernel==6.13.0
-    - ipython-genutils==0.2.0
-    - jupyterlab-pygments==0.2.2
-    - mistune==0.8.4
-    - notebook==6.4.10
-    - pandocfilters==1.5.0
-    - prometheus-client==0.14.1
-    - send2trash==1.8.0
-    - soupsieve==2.3.2.post1
-    - tensorflow-addons==0.16.1
-    - terminado==0.13.3
+    - certifi==2022.12.7
+    - cffi==1.15.1
+    - click==8.1.3
+    - click-plugins==1.1.1
+    - cligj==0.7.2
+    - contourpy==1.0.7
+    - cycler==0.11.0
+    - eccodes==1.4.2
+    - fastjsonschema==2.16.2
+    - fiona==1.9.1
+    - fonttools==4.38.0
+    - jsonschema==4.17.3
+    - jupyter-core==5.2.0
+    - jupytext==1.14.4
+    - kiwisolver==1.4.4
+    - markdown-it-py==2.1.0
+    - matplotlib==3.7.0
+    - mdit-py-plugins==0.3.3
+    - mdurl==0.1.2
+    - munch==2.5.0
+    - nbformat==5.7.3
+    - numpy==1.23.4
+    - opencv-python-headless==4.7.0.68
+    - pandas==1.5.1
+    - pillow==9.4.0
+    - platformdirs==3.0.0
+    - pyrsistent==0.19.3
+    - pyyaml==6.0
+    - shape==0.1.1
+    - sklearn==0.0.post1
     - toml==0.10.2
-    - typeguard==2.13.3
-    - webencodings==0.5.1
+    - traitlets==5.9.0
 
