--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ fiona = "^1.9.1"
 matplotlib = ">=1.5,<3.7"
 seaborn = "^0.12.2"
 ensemble-boxes = "^1.0.9"
+arviz = "^0.15.0"
 
 [tool.poetry.dev-dependencies]
 
