--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,19 @@
 [tool.poetry]
-name = "tc_formation"
+name = "tc-formation"
 version = "0.1.0"
-description = "TC genesis forecast using deep models"
+description = "TC genesis detection using deep models"
 authors = ["Quan Nguyen <qmnguyen@iu.edu>"]
 license = "MIT"
+readme = "README.md"
+packages = [{include = "tc_formation"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
+tensorflow = "~2.9.1"
 pandas = "^1.5.3"
 xarray = "^2023.2.0"
 scipy = "^1.10.1"
 scikit-learn = "^1.2.1"
-tensorflow = "^2.11.0"
-tensorflow-addons = "^0.19.0"
 basemap = "^1.3.6"
 numpy = ">=1.22,<1.24"
 scikit-image = "^0.20.0"
@@ -26,15 +27,14 @@ matplotlib = ">=1.5,<3.7"
 seaborn = "^0.12.2"
 ensemble-boxes = "^1.0.9"
 arviz = "^0.15.0"
-
-[tool.poetry.dev-dependencies]
+tensorflow-addons = "^0.19.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^3.6.1"
 jupytext = "^1.14.5"
 autopep8 = "^2.0.1"
-ipywidgets = "^8.0.4"
+ipywidgets = "^7.2.3.4"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
