--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ ensemble-boxes = "^1.0.9"
 arviz = "^0.15.0"
 tensorflow-addons = "^0.19.0"
 opencv-python = "^4.7.0.72"
+basemap-data-hires = "^1.3.2"
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^3.6.1"
